# hCM-CaseStudy

./: README.md  hCM-CaseStudy.cabal  stack.yaml
app/: Main.hs
src/CM/CaseStudy/: Helpers.hs  Model.hs
src/CM/CaseStudy/Instances/: Generate.hs  GeneratedPeople.hs  Manual.hs  Values.hs
